[package]
name = "income-app"
version = "0.1.0"
authors = ["Patrik Fallqvist Magnusson <patrik.fallqvist@gmail.com>"]
edition = "2021"
build = "build.rs"
description = "A desktop app that divides up income"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.7.2"

[build-dependencies]
slint-build = "1.7.2"

[package.metadata.bundle]
name = "Income Divider"
identifier = "io.github.lordrekishi.income-divider"